--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,4 @@
 @import '../../style/settings.css';
-
 .header {
   max-width: 1300px;
   margin: 0px auto;
@@ -8,7 +7,21 @@
   align-items: center;
   min-height: 85px;
 }
-
+@media screen and (max-width: 1350px) {
+  .header {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .header {
+    max-width: 800px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .header {
+    max-width: 90%;
+  }
+}
 .header__logo {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
@@ -18,13 +31,29 @@
   color: rgb(180, 56, 122);
   cursor: pointer;
 }
-
 .header__nav_list {
   display: flex;
   justify-content: space-between;
   width: 437px;
 }
-
+@media screen and (max-width: 650px) {
+  .header__nav_list {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 50vw;
+    height: 100%;
+    margin: 0;
+    text-align: center;
+    padding: 120px 0;
+    background-color: rgb(245, 244, 255);
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.25s;
+    z-index: 2;
+    overflow: hidden;
+  }
+}
 .header__nav_link {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
@@ -35,19 +64,30 @@
   transition: 0.5s;
   cursor: pointer;
 }
-.header__nav_link_selected{
+.header__nav_link:hover {
+  color: #b2a35f;
+}
+@media screen and (max-width: 850px) {
+  .header__nav_link {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .header__nav_link {
+    font-size: 16px;
+    text-align: center;
+    padding-top: 30px;
+  }
+}
+.header__nav_link_selected {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   line-height: 18px;
   font-size: 16px;
   letter-spacing: 0.02em;
-  color: #B2A35F;
+  color: #b2a35f;
   cursor: pointer;
 }
-.header__nav_link:hover {
-  color: #B2A35F;
-}
-
 .header__button {
   width: 128px;
   height: 50px;
@@ -64,15 +104,27 @@
   letter-spacing: 0.02em;
   transition: 0.5s;
 }
-
 .header__button:hover {
   background: #7796c0;
 }
-
+@media screen and (max-width: 650px) {
+  .header__button {
+    display: none;
+  }
+}
 .header__hamb {
   display: none;
 }
-
+@media screen and (max-width: 650px) {
+  .header__hamb {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: block;
+    cursor: pointer;
+    z-index: 3;
+  }
+}
 .header__hamb_bar {
   display: block;
   width: 40px;
@@ -81,7 +133,16 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
-
+@media screen and (max-width: 650px) {
+  .header__hamb_bar {
+    display: block;
+    width: 40px;
+    height: 2px;
+    margin: 6px auto;
+    transition: all 0.3s ease-in-out;
+    background-color: rgb(29, 25, 41);
+  }
+}
 .header__hamb_bar_first {
   opacity: 0;
   display: block;
@@ -91,7 +152,6 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
-
 .header__hamb_bar_second {
   transform: translateY(4px) rotate(45deg);
   display: block;
@@ -101,7 +161,6 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
-
 .header__hamb_bar_third {
   transform: translateY(-4px) rotate(-45deg);
   display: block;
@@ -111,7 +170,6 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
-
 .header__hamb_bar_fourth {
   opacity: 0;
   display: block;
@@ -121,7 +179,6 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
-
 .header__nav_list_active {
   right: 0%;
   display: block;
@@ -132,80 +189,15 @@
   margin: 0;
   text-align: center;
   padding: 120px 0;
-  background-color: rgba(245, 244, 255, 1);
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-  transition-duration: .25s;
+  background-color: rgb(245, 244, 255);
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+  transition-duration: 0.25s;
   z-index: 2;
   overflow: hidden;
 }
 
-@media screen and (max-width: 1350px) {
-  .header {
-    max-width: 1000px;
-  }
-}
-
-@media screen and (max-width: 1050px) {
-  .header {
-    max-width: 800px;
-  }
-}
-
 @media screen and (max-width: 850px) {
-  .header {
-    max-width: 90%;
-  }
-
   .header__nav {
     width: 400px;
   }
-
-  .header__nav_link {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .header__button {
-    display: none;
-  }
-
-  .header__hamb {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: block;
-    cursor: pointer;
-    z-index: 3;
-  }
-  .header__nav_list{
-    display: block;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 50vw;
-    height: 100%;
-    margin: 0;
-    text-align: center;
-    padding: 120px 0;
-    background-color: rgba(245, 244, 255, 1);
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-    transition-duration: .25s;
-    z-index: 2;
-    overflow: hidden;
-  }
-  .header__nav_link{
-    font-size: 16px;
-    text-align: center;
-    padding-top: 30px;
-  }
-
-  .header__hamb_bar {
-    display: block;
-    width: 40px;
-    height: 2px;
-    margin: 6px auto;
-    transition: all 0.3s ease-in-out;
-    background-color: rgba(29, 25, 41, 1);
-  }
-}
+}/*# sourceMappingURL=header.module.css.map */
