--- a/src/components/mainpage/world/world.module.css
+++ b/src/components/mainpage/world/world.module.css
@@ -1,43 +1,37 @@
 .world {
-    max-width: 1300px;
-    margin: 0px auto;
-    text-align: center;
+  max-width: 1300px;
+  margin: 0px auto;
+  text-align: center;
 }
-
-.world__title {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    line-height: 50px;
-    font-size: 30px;
-    padding-top: 50px;
-}
-
-.world__text {
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    line-height: 50px;
-    font-size: 16px;
-    padding-top: 8px;
-}
-
-.world__img {
-    margin-top: 38px;
-}
-
 @media screen and (max-width: 1350px) {
-    .world {
-        max-width: 1000px;
-    }
+  .world {
+    max-width: 1000px;
+  }
 }
-
-@media screen and (max-width: 1050px) {
-    .world__img {
-        width: 80%;
-    }
-}
-
 @media screen and (max-width: 850px) {
-    .world {
-        width: 90%;
-    }
+  .world {
+    width: 90%;
+  }
 }
+.world__title {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  line-height: 50px;
+  font-size: 30px;
+  padding-top: 50px;
+}
+.world__text {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  line-height: 50px;
+  font-size: 16px;
+  padding-top: 8px;
+}
+.world__img {
+  margin-top: 38px;
+}
+@media screen and (max-width: 1050px) {
+  .world__img {
+    width: 80%;
+  }
+}/*# sourceMappingURL=world.module.css.map */
