--- a/src/components/loanpage/caurousel/carousel.module.scss
+++ b/src/components/loanpage/caurousel/carousel.module.scss
@@ -44,6 +44,10 @@
             line-height: 44px;
             letter-spacing: 0.02em;
             margin: 20px 0;
+            @media screen and (max-width: 500px) {
+                font-size: 20px;
+                line-height: 34px;
+            }
         }
 
         &_text {
@@ -52,6 +56,9 @@
             font-weight: 500;
             line-height: 16px;
             letter-spacing: 0.02em;
+            @media screen and (max-width: 500px) {
+                font-size: 12px;
+            }
         }
     }
 
