--- a/src/components/loanpage/creditCard/creditCard.module.scss
+++ b/src/components/loanpage/creditCard/creditCard.module.scss
@@ -43,6 +43,10 @@
             display: block;
             margin: 0 auto 80px;
         }
+        @media screen and (max-width: 400px) {
+            width: 200px;
+            height: 120px;
+        }
     }
 
     &__text {
